--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ html, body{
 
 /* setction t-1 */
 
-
 #t1{
     display: grid;
     grid-template-columns:1fr 1fr 1fr 1fr;
@@ -23,7 +22,7 @@ html, body{
     grid-template-areas:"t1-head t1-head t1-head t1-head "
                         "t1-section t1-section t1-section t1-section "
                         "t1-main t1-main t1-main t1-main"
-                        "t1-foot1 t1-foot2 t1-foot3 t1-foot4";
+                        "t1-foot t1-foot t1-foot t1-foot";
 }
 
 #t1-head{
@@ -53,6 +52,7 @@ html, body{
     padding: 12px 24px;
     border-radius: 25px;
     margin-right:15px ;
+    cursor: pointer ;
 }
 .t1-head-right .btn1{
     color:#0161FE;
@@ -122,29 +122,43 @@ html, body{
 /* t1 main */
 
 #t1-main{
-    /* grid-area: t1-main;
-    margin-top: 20px;
-    min-height:900px ;
-    width: 100%;
-    padding: 20px 60px;
-    background-image: url(/img/t1-hero.webp);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center; */
-    
     grid-area: t1-main;
-    padding: 20px 60px;
+    padding: 80px 0;
     margin-top: 20px;
+    margin-left: 80px;
+    margin-right: 80px;
     background-color: #d9d9d9;
     background-image: url(/img/t1-hero.webp);
     background-size: cover;
     background-position: center;
     border-radius: 20px;
     background-repeat: no-repeat;
-    min-height: 450px;
+    min-height: 700px;
 }
-/* 
-#t1-main img{
-    padding: 20px 60px;
-    border-radius: 25px;
-} */
+
+/* t1 footer */
+
+.stat-container{
+    grid-area:t1-foot ;
+    height: 200px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.stat-box{
+    display: flex;
+    flex-direction: column;
+    text-align:center;
+    gap: 10px;
+}
+.stat-box h2{
+    font-size: 60px;
+    font-weight:500;
+}
+.stat-box p{
+    font-size: 20px;
+    color: #716f6f;
+}
