--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 html, body{
     height: 100%;
     width: 100%;
+
 }
 @font-face {
     font-family:f1;
@@ -187,17 +188,70 @@ html, body{
 #ex-co1 {
     padding-top:350px ;
     font-family:f1 ;
-    font-size: 35px;
+    font-size: 25px;
     font-weight: 200;
 }
 #ex-co2{
-    padding-top: 40px;
+    padding-top: 50px;
     font-size: 20px;
+    font-weight: 400;
     color: #716f6f;;
 }
 #ex-container2 img{
-    height: 700px;
-    margin-right: 50px;
+    height: 600px;
+    margin-right: 45px;
     border-radius: 25px;
 }
 
+/* service */
+
+#services{
+    padding:40px 50px ;
+    background-color: white;
+}
+
+#services button{
+    font-size: 20px;
+    padding: 12px 24px;
+    border-radius: 25px;
+    margin-right:15px ;
+    cursor: pointer ;
+}
+.service-con{
+    padding: 50px 0;
+    display: flex;
+    align-items: center;
+    /* gap: 50px; */
+}
+#ser-con-left{
+    flex: 1;
+    font-size: 25px;
+
+}
+#ser-con-right{
+    flex: 1;
+    font-size: 20px;
+    color: #716f6f;
+}
+
+/* service-cards grid */
+
+.service-cards{
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+
+.blue-card{
+    grid-column: span 1;
+}
+.team-card{
+  background: #f5f5f5;
+  padding: 20px;
+  border-radius: 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
