--- a/style.css
+++ b/style.css
@@ -81,19 +81,22 @@ html, body{
     padding: 20px 60px;
 }
 
-#t1-leftinfo{
+#t1-leftinfo h2{
     width: 525px;
-    font-size: 35px;
-    font-weight: 100;
+    font-size: 40px;
+    font-weight: 200;
     font-family: f1;
+    padding-left: 20px;
 }
 
-#t1-rightinfo{
-    /* padding-left: 20px; */
-    font-size: 25px;
-    flex: 1;
-    margin-left: -50px;
+#t1-rightinfo p{
+    font-size: 18px;
+    color: #716f6f;
+    /* margin-left: -50px; */
+}
 
+#t1-rightinfo {
+    margin-left: -50px;
 }
 
 #t1-rightinfo button{
@@ -111,6 +114,7 @@ html, body{
     color:#0161FE;
     background-color: none;
     border: 2px solid #0161FE;
+    
 }
 
 
@@ -195,7 +199,7 @@ html, body{
     padding-top: 50px;
     font-size: 20px;
     font-weight: 400;
-    color: #716f6f;;
+    color: #716f6f;
 }
 #ex-container2 img{
     height: 600px;
@@ -237,12 +241,9 @@ html, body{
 /* service-cards grid */
 
 .service-cards{
-    width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
-    box-sizing: border-box;
-    overflow-x: hidden;
 }
 
 .blue-card{
@@ -252,6 +253,47 @@ html, body{
   background: #f5f5f5;
   padding: 20px;
   border-radius: 10px;
-  width: 100%;
-  box-sizing: border-box;
 }
+.team-card img{
+    width: 100%;
+    object-fit: cover;
+}
+
+.blue-card{
+    background-color: #0061fe;
+    color: white;
+}
+
+.blue-info{
+    padding: 15px 10px;
+    text-align: left;
+}
+.blue-info h4{
+    color: #e0e0e0e2;
+}
+
+.blue-card p{
+    padding-top:150px ;
+    padding-left: 10px;
+    color: #e0e0e0e2;
+}
+.blue-socials{
+
+    gap: 15px;
+    padding-top: 100px;
+    padding-left: 10px;
+}
+.blue-socials a{
+    text-decoration: none;
+    border: 1px solid white;
+    color: white;
+    border-radius: 50%;
+    font-size: 30px;
+    transition: opacity 0.3s;
+}
+
+.blue-socials a:hover {
+  opacity: 0.8;
+}
+
+
