--- a/style.css
+++ b/style.css
@@ -249,15 +249,42 @@ html, body{
 .blue-card{
     grid-column: span 1;
 }
-.team-card{
+
+.team-card {
+  position: relative;
+  overflow: hidden;   
+  border-radius: 15px;
+  aspect-ratio: 3 / 4; 
   background: #f5f5f5;
-  padding: 20px;
-  border-radius: 10px;
+  cursor: pointer;
 }
+
 .team-card img{
+    height: 100%;
     width: 100%;
     object-fit: cover;
+    display: block;
+    transition: transform 0.4s ease;
 }
+.team-info {
+  text-align: center;
+  position: absolute;
+  bottom: 0;  
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  background:  linear-gradient(to top, rgba(0, 0, 0, 0.8), transparent);
+  color: white;
+  transform: translateY(100%); 
+  transition: transform 0.4s ease; 
+}
+.team-card:hover .team-info {
+  transform: translateY(0);
+}
+.team-card:hover img {
+  transform: scale(1.05);
+}
+
 
 .blue-card{
     background-color: #0061fe;
